Fixing spacing issues with GameCard

--- a/frontend/src/components/Games/GameCard/GameCard.scss
+++ b/frontend/src/components/Games/GameCard/GameCard.scss
@@ -16,12 +16,6 @@
   border-radius: $radius-md;
 }
 
-.game-card-artwork-title {
-  color: $color-text-subtle;
-  font-size: $font-size-sm;
-  line-height: $line-height-heading;
-}
-
 .game-card-source {
   position: absolute;
   top: $spacing-sm;
