--- a/frontend/src/components/Layout/Layout.scss
+++ b/frontend/src/components/Layout/Layout.scss
@@ -17,5 +17,4 @@
 
 .layout-main-content {
   width: 100%;
-  max-width: $app-content-max-width;
 }
