--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -46,7 +46,7 @@ $app-border: $app-border-width solid $color-border-subtle;
 $input-height: 2.5rem;
 $game-grid-min-column-width: 9rem;
 $game-search-min-width: 16rem;
-$game-artwork-aspect-ratio: list.slash(1, 2);
+$game-artwork-aspect-ratio: list.slash(2, 3);
 $game-source-icon-size: 1.5rem;
 $toast-width: 20rem;
 
